--- a/style/main.css
+++ b/style/main.css
@@ -20,6 +20,13 @@ ul {
     padding: 0;
 }
 
+.overlay.is-active {
+    position: fixed;
+    width: 100%;
+    min-height: 100%;
+    z-index: 3;
+}
+
 .container {
     padding-left: 15px;
     padding-right: 15px;
@@ -47,12 +54,14 @@ ul {
 
 header {
     background-color: white;
-    width: calc(100% - 295px);
     border-radius: 15px;
     position: fixed;
-    left: 280px;
+    width: calc(100% - 130px);
+    left: 110px;
     top: 14px;
-    z-index: 999999999999;
+    z-index: 2;
+    transition: 0.3s;
+    box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.13), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
 }
 
 @media (max-width:768px) {
@@ -190,7 +199,7 @@ header .search input:focus {
     position: fixed;
     background-color: #eee;
     top: 0;
-    z-index: 9999999999;
+    z-index: 2;
 }
 
 aside {
@@ -201,19 +210,23 @@ aside {
     border-radius: 15px;
     min-height: calc(100vh - 30px);
     background-color: white;
-    z-index: 99999999999;
+    z-index: 4;
+    transition: 0.3s;
+    box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.13), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
 }
 
 @media (max-width:768px) {
     aside {
         display: flex;
         align-items: center;
-        width: calc(100% - 30px);
-        left: 15px;
-        bottom: 15px;
+        width: 100%;
+        left: 0;
+        border-radius: 0;
+        bottom: 0px;
         min-height: auto;
         height: 85px;
         overflow: hidden;
+        box-shadow: 0 -12px 20px 0 rgba(0, 0, 0, 0.13), 0 -2px 4px 0 rgba(0, 0, 0, 0.12);
     }
 }
 
@@ -221,10 +234,27 @@ aside .logo {
     height: 40px;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 aside .logo img {
     width: 100px;
+    position: absolute;
+    transition: 0.3s;
+}
+
+aside.closed .logo .big {
+    opacity: 0;
+}
+
+aside .logo img:last-of-type {
+    width: 30px;
+    opacity: 0;
+}
+
+aside.closed .logo .small {
+    opacity: 1;
+    width: 40px;
 }
 
 aside>ul {
@@ -242,6 +272,13 @@ aside .more li a {
     border-radius: 15px;
     font-size: 14px;
     font-weight: 500;
+    white-space: nowrap;
+    transition: 0.3s;
+}
+
+aside .shortcuts li a span,
+aside .subs li a span,
+aside .more li a span {
     transition: 0.3s;
 }
 
@@ -261,6 +298,8 @@ aside .more h2 {
     color: #636363;
     font-weight: bold;
     font-size: 16px;
+    white-space: nowrap;
+    transition: 0.3s;
 }
 
 aside .subs img {
@@ -278,6 +317,31 @@ aside ul li a:hover {
     display: none;
 }
 
+aside.closed {
+    width: 85px;
+    overflow: hidden;
+}
+
+aside.isclosed .shortcuts li a span,
+aside.isclosed .subs li a span,
+aside.isclosed .more li a span {
+    display: none;
+}
+
+aside.closed .shortcuts li a span,
+aside.closed .subs li a span,
+aside.closed .more li a span,
+aside.closed .subs h2,
+aside.closed .more h2 {
+    opacity: 0;
+}
+
+aside.closed .shortcuts li a i,
+aside.closed .more li a i,
+aside.closed .subs li a i,
+aside.closed .subs img {
+    margin-right: 0;
+}
 
 @media (max-width:768px) {
     aside .logo {
@@ -304,14 +368,22 @@ aside ul li a:hover {
         color: #636363;
         background-color: #f4f4f4;
         border-radius: 15px;
-        width: 60px;
+        width: 65px;
         aspect-ratio: 1/1;
-        font-size: 20px;
+        font-size: 14px;
+        font-weight: 500;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         margin-right: 15px;
         transition: 0.3s;
         padding: 5px;
+    }
+
+
+    aside .buttons ul li a i {
+        font-size: 20px;
+        margin-bottom: 10px;
     }
 
     aside .buttons ul li a.active,
@@ -323,9 +395,9 @@ aside ul li a:hover {
 
 main {
     position: absolute;
-    left: 265px;
     top: 85px;
-    width: calc(100% - 280px);
+    width: calc(100% - 115px);
+    left: 100px;
     margin-top: 15px;
 }
 
@@ -401,6 +473,7 @@ main .ad {
     border-radius: 15px;
     margin-top: 15px;
     cursor: pointer;
+    box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.13), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
 }
 
 main .ad img,
@@ -421,6 +494,7 @@ main .vids .video {
     background-color: white;
     border-radius: 15px;
     padding: 10px;
+    box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.13), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
 }
 
 main .vids .thumb img {
@@ -457,10 +531,4 @@ main .vids .info span {
     font-size: 14px;
     font-weight: 500;
     margin-bottom: 5px;
-}
-
-.wrap.b-wrap {
-    bottom: 0;
-    top: unset;
-    z-index: 999;
 }
