--- a/style/main.css
+++ b/style/main.css
@@ -88,9 +88,25 @@ header .container {
     max-width: 100%;
 }
 
+header .logo {
+    position: relative;
+    width: 100px;
+    height: 33px;
+}
+
 header .logo img {
+    position: absolute;
     width: 100px;
     margin-right: 30px;
+    transition: 0.3s;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+}
+
+header .logo .small-logo {
+    width: 32px;
+    opacity: 0;
 }
 
 header .nav {
@@ -171,6 +187,10 @@ header .search input:focus {
     display: none;
 }
 
+header .buttons ul li a.second-menu {
+    display: none;
+}
+
 @media (max-width: 991px) {
     .search input {
         display: none;
@@ -199,6 +219,58 @@ header .search input:focus {
         width: 100%;
         border-radius: 15px;
         margin-right: 0;
+    }
+}
+
+@media (max-width:375px) {
+    ul.menu-list li {
+        transition: 0.3s;
+    }
+
+    ul.menu-list.closed li:not(:first-child) {
+        opacity: 0;
+        pointer-events: none;
+        transform: translateX(160px) scale(0);
+    }
+
+    ul.menu-list.closed li:last-child {
+        opacity: 1;
+        pointer-events: all;
+        transform: scale(1);
+    }
+
+    ul.menu-list.closed li:first-child {
+        transform: translateX(160px);
+    }
+
+    header .buttons ul li a.second-menu {
+        display: flex;
+    }
+
+    header .second-menu .images {
+        position: relative;
+        width: 22px;
+        height: 22px;
+    }
+
+    header .second-menu .images img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        max-height: 100%;
+        transition: 0.3s;
+    }
+
+    header .second-menu .images .c {
+        opacity: 0;
+    }
+
+    header .second-menu:hover .c {
+        opacity: 1;
+    }
+
+    header .second-menu:hover .b {
+        opacity: 0;
     }
 }
 
@@ -236,33 +308,6 @@ aside {
         height: 85px;
         box-shadow: 0 -12px 20px 0 rgba(0, 0, 0, 0.13), 0 -2px 4px 0 rgba(0, 0, 0, 0.12);
     }
-}
-
-aside .logo {
-    height: 40px;
-    display: flex;
-    align-items: center;
-    position: relative;
-}
-
-aside .logo img {
-    width: 100px;
-    position: absolute;
-    transition: 0.3s;
-}
-
-aside.closed .logo .big {
-    opacity: 0;
-}
-
-aside .logo img:last-of-type {
-    width: 30px;
-    opacity: 0;
-}
-
-aside.closed .logo .small {
-    opacity: 1;
-    width: 40px;
 }
 
 aside>ul:not(:first-of-type) {
@@ -427,6 +472,32 @@ aside.closed .subs img {
 
     aside .buttons ul li a:hover .b {
         opacity: 0;
+    }
+}
+
+@media (max-width:375px) {
+    aside {
+        height: 70px;
+    }
+
+    aside .buttons ul li a {
+        min-height: 60px;
+        max-width: 60px;
+    }
+
+    aside .buttons ul li a i {
+        font-size: 16px;
+    }
+
+    aside .buttons .images {
+        position: relative;
+        width: 18px;
+        height: 16px;
+        margin-bottom: 10px;
+    }
+
+    aside .buttons .add i {
+        font-size: 22px;
     }
 }
 
