--- a/style/main.css
+++ b/style/main.css
@@ -88,25 +88,16 @@ header .container {
     max-width: 100%;
 }
 
-header .logo {
-    position: relative;
-    width: 100px;
-    height: 33px;
-}
-
 header .logo img {
-    position: absolute;
     width: 100px;
     margin-right: 30px;
     transition: 0.3s;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
 }
 
-header .logo .small-logo {
-    width: 32px;
-    opacity: 0;
+@media (min-width:376px) {
+    header .logo .small-logo {
+        display: none;
+    }
 }
 
 header .nav {
@@ -223,6 +214,27 @@ header .buttons ul li a.second-menu {
 }
 
 @media (max-width:375px) {
+    header .logo {
+        position: relative;
+        width: 100px;
+        height: 33px;
+    }
+
+    header .logo img {
+        position: absolute;
+        width: 100px;
+        margin-right: 30px;
+        transition: 0.3s;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+    }
+
+    header .logo .small-logo {
+        width: 32px;
+        opacity: 0;
+    }
+
     ul.menu-list li {
         transition: 0.3s;
     }
